src/view/statistics/index.css
body {
  background: #433D3D;
}

.intro {
  display: block;
  position: relative;
  height: 100%;
}

.main {
  position: relative;
  padding-left: 10px;
  left: 0;
}

.averages {
  padding-left: 40px;
  left: 0;
}

.averages h3 {
  margin: 5px;
}

.statistics {
  width: 100%;
  height: 100%;
}

.sites-container {
  height: 100%;
  right: 0%;
  position: relative;
  text-align: center;
  opacity: 1;
  display: block;
}

.sites-table {
  display: inline-table;
  border-collapse: collapse;
  color: #FFF;
}

.sites-table th {
  background: #E4F1FE;
  color: #2C3E50;
}

.sites-table td, .sites-table th {
  padding: 8px 5px 8px 8px;
  border: 1px solid #E4F1FE;
}

.sites-table a {
  color: #82D6C8;
}

.sites-table .text {
  color: #000;
}

.host-container {
  display: inline-block;
  cursor: pointer;
}

.host-favicon {
  margin-right: 5px;
}

.host-link {
  color: #82D6C8;
  text-decoration: underline;
}

.progress {
  width: 250px;
  height: 20px;
  border: 1px solid #aaa;
  background-color: #eee;
  position: relative;
}

.progress > .value {
  display: block;
  height: 100%;
  color: black;
  background-color: #06C798;
}

.progress > .text {
  font-size: 16px;
  position: absolute;
  display: block;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.trash-container {
  text-align: center;
}

.svg-trash {
  width: 24px;
  height: 24px;
}

.host-stats-modal {
  top: 0; 
  left: 0; 
  width: 100%;
  height: 100%;
  padding-top: 100px;
  position: fixed;
  display: none;
  background-color: rgb(0, 0, 0, 0.4);
}

.modal-content {
  background: #F2F1EF;
  color: black;
  width: 50%;
  margin: auto;
}

.top-container {
  padding: 10px;
  border: 1px solid black;
}

.left-arrow-container {
  display: inline-block; 
  cursor: pointer;
}

.left-arrow {
  width: 24px;
  height: 16px;
}

.title {
  display: inline-block;
  float: right;
  margin: 0;
}

#site-stat {
  color: red;
}

.middle-container {
  border: 1px solid black;
  padding: 20px;
}

.custom {
  display: block;
  visibility: hidden;
  margin: 10px;
}

.custom:last-child {
  color: red;
}

.chart-container {
  border: 1px solid black;
  overflow-x: auto;
  width: 100%;
}

.chart-wrapper {
  position: relative;
  height: 30%;
}

.extras {
  padding-top: 20px;
}

#custom-usage-item {
  visibility: hidden;
}

.highlight {
  color: red;
  font-weight: bold;
}

.scroll-left {
  right: 100%;
  left: 0;
  opacity: 0.1;
  transition: right 2s, opacity 1s;
}

.scroll-back {
  right: 0;
  left: 0;
  opacity: 1;
  transition: right 2s, opacity 1s;
}

.scroll-right {
  left: 100%;
  right: 0;
  opacity: 0.1;
  transition: right 2s, opacity 1s;
}

.hide {
  opacity: 0;
  visibility: hidden;
}

.partial-hide {
  opacity: 0.1;
}

